PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
29 Oct 2015, PHP 7.0.0 RC 6

- Core:
  . Fixed bug #70689 (Exception handler does not work as expected). (Laruence)

- SOAP:
  . Fixed bug #70715 (Segmentation fault inside soap client). (Laruence)
  . Fixed bug #70709 (SOAP Client generates Segfault). (Laruence)

15 Oct 2015, PHP 7.0.0 RC 5

- Core:
  . Fixed bug #70630 (Closure::call/bind() crash with ReflectionFunction->
    getClosure()). (Dmitry, Bob)
  . Fixed bug #70662 (Duplicate array key via undefined index error handler).
    (Nikita)
  . Fixed bug #70681 (Segfault when binding $this of internal instance method
    to null). (Nikita)
  . Fixed bug #70685 (Segfault for getClosure() internal method rebind with
    invalid $this). (Nikita)

- Mcrypt:
  . Fixed bug #70625 (mcrypt_encrypt() won't return data when no IV was
    specified under RC4). (Nikita)

- Opcache:
  . Fixed compatibility with Windows 10 (see also bug #70652). (Anatol)

- Phpdbg:
  . Fixed bug #70614 (incorrect exit code in -rr mode with Exceptions). (Bob)

- Reflection:
  . Fixed bug #70650 (Wrong docblock assignment). (Marcio)
  . Fixed bug #70674 (ReflectionFunction::getClosure() leaks memory when used
    for internal functions). (Dmitry, Bob)

- Standard:
  . Fixed bug #70667 (strtr() causes invalid writes and a crashes). (Dmitry)
  . Fixed bug #70668 (array_keys() doesn't respect references when $strict is
    true). (Bob, Dmitry)


01 Oct 2015, PHP 7.0.0 RC 4

- Core:
  . Added zend_internal_function.reserved[] fields. (Dmitry)
  . Fixed bug #70557 (Memleak on return type verifying failed). (Laruence)
  . Fixed bug #70555 (fun_get_arg() on unsetted vars return UNKNOW). (Laruence)
  . Fixed bug #70548 (Redundant information printed in case of uncaught engine
    exception). (Laruence)
  . Fixed bug #70547 (unsetting function variables corrupts backtrace).
    (Laruence)